deployment/gke/deployment-emi.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-emi
  labels:
    run: frontend-emi
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: frontend-emi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-emi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend-emi
  template:
    metadata:
      labels:
        run: frontend-emi
    spec:
      containers:
      - name: frontend-emi
        image: IMAGE_NAMESPACE/IMAGE_NAME:IMAGE_TAG
        resources:
          requests:
            cpu: "10m"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-auth
